--- a/intro-questions/index.html
+++ b/intro-questions/index.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Introduction Questions</title>
+        <title>Ghostbusters Quotes</title> 
+        <style>
+            body {background-color: rgb(234, 0, 0);}
+            h1{color: white;}
+            h1{margin-left: 100px;}
+            h1{font-size: 80px;}
+            h2{font-size: 50px;}
+            h2{margin-top: -50px;}
+            h2{margin-left: 100px;}
+            h2{color: white;}
+            h3{color: white;}
+            h3{margin-left: 100px;}
+            h3{font-size: 20px;}
+            h4{color: white;}
+            h4{margin-left: 100px;}
+            h4{font-size: 20px;}
+            h5{color: white;}
+            h5{margin-left: 100px;}
+            h5{font-size: 20px;}
+            h1,h2,h3,h4,h5 {font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
+            p{margin-left: 100px;}
+            p{font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
+        </style>
     </head>
+
     <body>
-        <p>1. My name is Audrey Engman. I am a junior studying Communication Design.</p>
-        <p>2. I want to pursue User Experience Design and User Interface Design. This past summer I worked as a UX Designer in the Digital Technology Development Program at GE HealthCare. </p>
-        <p>3. I have very little experience with coding. We did a little bit of CSS last Spring in Type 1.</p>
-        <p>4. I want to learn how to feel comfortable making a simple website. I would really like to build my own portfolio site. Additionally, it would be helpful to have contextual knowledge of what software developers are doing.</p>
-        <p>5. As a designer for screens, you must consider the various types of devices someone may be accessing your designs on. It could be a phone, tablet, computer, tv, etc. </p>
-        <p>6. Airbnb https://www.airbnb.com/a/stays?c=.pi0.pk36239956_25650614176&ghost=true&gclid=Cj0KCQjw39uYBhCLARIsAD_SzMQQi3ss0Cwd8RoUq6h1epv5FLAVNnd2D0AFba7l5XLY2KUB-ZNkWqEaApQEEALw_wcB . I love Airbnb's site as it is extremely intuitive and prioritizes the customer function of finding a place to stay as soon as you arrive on the site. I also really like their wishlist function.</p>
-        <p>7. Pay Pal https://www.paypal.com/us/home . Pay Pal clearly states the incentives for creating an account and how to proceed from the moment a customer lands on their home page.</p>
-        <p>8. Apple's Support https://support.apple.com/ . Apple does a really great job of solving a problem as efficiently and sleekly as possible. It is very intuitive and easy to navigate their support and find help with a specific product.</p>
+        <h1>Ghostbusters Quotes </h1>
+        <h2> (1984)</h2>
+        <h3>Scene 1</h3>
+        <p>Dr. Peter Venkman: "What I'd really like to do is talk to Dana. Dana? It's Peter."</p>
+        <p>Dana Barrett: "There is no Dana, there is only Zuul."</p>
+        <p>Dr. Peter Venkman: "Oh, Zuulie, you nut, now c'mon. Just relax, c'mon. I want to talk to Dana. Dana, Dana. "Can I talk to Dana?</p>
+        <p>Dana Barrett: "in an inhuman demonic voice There is no Dana, only Zuul!"</p>
+        <p>Dr. Peter Venkman: "What a lovely singing voice you must have."</p><br>
+
+        <h4>Scene 2</h4>
+        <p>Dr. Peter Venkman: "This city is headed for a disaster of biblical proportions."</p>
+        <p>Mayor: "What do you mean, 'biblical?'"</p>
+        <p>Dr Ray Stantz: "What he means is Old Testament, Mr. Mayor, real wrath of God type stuff."</p>
+        <p>Dr. Peter Venkman: "Exactly."</p>
+        <p>Dr Ray Stantz: "Fire and brimstone coming down from the skies! Rivers and seas boiling!"</p>
+        <p>Dr. Egon Spengler: "Forty years of darkness! Earthquakes, volcanoes..."</p>
+        <p>Winston Zeddemore: "The dead rising from the grave!"</p>
+        <p>Dr. Peter Venkman: "Human sacrifice, dogs and cats living together... mass hysteria!"</p>
+        <p>Mayor: "All right, all right! I get the point!"</p><br>
+
+        <h5>Scene 3</h5>
+        <p>[clearing away tables in the dining room to make room for the ghost trap]</p>
+        <p>Dr Ray Stantz: I've gotta get this in the clear...!</p>
+        <p>Dr Ray Stantz: Wait, wait, wait! I've always wanted to do this...</p>
+        <p>[He yanks a tablecloth off of a table, overturning and shattering everything except the centerpiece in the middle]</p>
+        <p>Dr. Peter Venkman: [triumphantly] And the flowers are still standing!</p>
+        <br>
+        <br>
+
     </body>
 </html>
